# crate-template

./: README.md  default.env
template/: .travis.yml  Cargo.toml  README.md
template/.github/workflows/: ci.yml
template/src/: lib.rs
