[package]
name = "{{CRATE}}"
version = "0.0.0"
authors = ["{{AUTHOR}} <{{EMAIL}}>"]
edition = "2018"
# TODO: Write description
#description = ""
documentation = "https://docs.rs/{{CRATE}}/"
repository = "https://github.com/{{GH-USER}}/{{CRATE}}.git"
# TODO: Add up to 5 keywords
#keywords = []
# TODO: Add categories
#categories = []
readme = "README.md"
license = "0BSD"

[badges]
travis-ci = { repository = "{{GH-USER}}/{{CRATE}}" }
maintenance = { status = "actively-developed" }

[dependencies]

[dev-dependencies]
version-sync = "0.8"


# cargo-release configuration
[package.metadata.release]
tag-message = "\{{version}}"
no-dev-version = true
pre-release-commit-message = "Release \{{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend a new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased\n"
replace = """
## Unreleased

No changes.

## [\{{version}} - \{{date}}](https://github.com/{{GH-USER}}/{{CRATE}}/releases/tag/\{{version}})
"""

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = '{{CRATE}} = "[a-z0-9\\.-]+"'
replace = '{{CRATE}} = "\{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/{{CRATE}}/[a-z0-9\\.-]+"
replace = "https://docs.rs/{{CRATE}}/\{{version}}"
